[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sepsis-surveillance-mvp"
version = "0.1.0"
description = "Rolling sepsis surveillance MVP benchmark on concept-layer MIMIC-IV data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
sepsis-mvp = "sepsis_mvp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

